fixing some spacing issues on desktop

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -418,7 +418,7 @@ body {
 
 header{
     height: 600px;
-    min-width: 1300px;
+    min-width: 1250px;
     padding:2rem;
     margin-top:0rem;
     display:flex;
